# advent-of-code-2024

./: pyproject.toml
notebooks/: proto.ipynb
scripts/: day_1.py  day_10.py  day_13.py  day_2.py  day_20.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
